Added battery script

--- a/i3blocks.conf
+++ b/i3blocks.conf
@@ -21,3 +21,17 @@ markup=none
 [time]
 command=/bin/i3-supersaiyaan-blocks/time
 interval=5
+
+
+# Battery
+[battery]
+command=/bin/i3-supersaiyaan-blocks/battery 0
+markup=pango
+interval=30
+
+# Battery 2 if you have two batteries in your system
+# [battery]
+# command=/bin/i3-supersaiyaan-blocks/battery 1
+# markup=pango
+# interval=30
+
