--- a/i3blocks.conf
+++ b/i3blocks.conf
@@ -16,6 +16,10 @@ command=/usr/lib/i3blocks/$BLOCK_NAME
 separator_block_width=15
 markup=none
 
+[volume]
+command=/bin/i3-supersaiyaan-blocks/volume
+markup=pango
+interval=10
 
 # Battery
 [battery]
