Added brightness adjustment option

--- a/i3blocks.conf
+++ b/i3blocks.conf
@@ -33,6 +33,9 @@ interval=30
 # markup=pango
 # interval=30
 
+[brightness]
+command=/bin/i3-supersaiyaan-blocks/brightness
+interval=10
 
 # Time/Date script
 [time]
