Added get_bars_as_text function.
Also added an icon for the brightness control

--- a/i3blocks.conf
+++ b/i3blocks.conf
@@ -21,6 +21,13 @@ command=/bin/i3-supersaiyaan-blocks/volume
 markup=pango
 interval=10
 
+
+[brightness]
+command=/bin/i3-supersaiyaan-blocks/brightness
+markup=pango
+interval=10
+
+
 # Battery
 [battery]
 command=/bin/i3-supersaiyaan-blocks/battery 0
@@ -32,10 +39,6 @@ interval=30
 # command=/bin/i3-supersaiyaan-blocks/battery 1
 # markup=pango
 # interval=30
-
-[brightness]
-command=/bin/i3-supersaiyaan-blocks/brightness
-interval=10
 
 # Time/Date script
 [time]
