--- a/i3blocks.conf
+++ b/i3blocks.conf
@@ -27,6 +27,9 @@ command=/bin/i3-supersaiyaan-blocks/brightness
 markup=pango
 interval=10
 
+[wifi]
+command=/bin/i3-supersaiyaan-blocks/wifi
+interval=5
 
 # Battery
 [battery]
