Added status for ethernet

--- a/i3blocks.conf
+++ b/i3blocks.conf
@@ -31,6 +31,11 @@ interval=10
 command=/bin/i3-supersaiyaan-blocks/wifi
 interval=5
 
+[ethernet]
+command=/bin/i3-supersaiyaan-blocks/ethernet
+interval=5
+markup=pango
+
 # Battery
 [battery]
 command=/bin/i3-supersaiyaan-blocks/battery 0
