--- a/i3blocks.conf
+++ b/i3blocks.conf
@@ -16,6 +16,11 @@ command=/usr/lib/i3blocks/$BLOCK_NAME
 separator_block_width=15
 markup=none
 
+[ipv4s-public]
+command=/bin/i3-supersaiyaan-blocks/ipv4s-public
+markup=pango
+interval=5
+
 [ipv4s]
 command=/bin/i3-supersaiyaan-blocks/ipv4s
 markup=pango
