Added user/hostname script

--- a/i3blocks.conf
+++ b/i3blocks.conf
@@ -16,6 +16,12 @@ command=/usr/lib/i3blocks/$BLOCK_NAME
 separator_block_width=15
 markup=none
 
+# Current user/host
+[user_host]
+command=/bin/i3-supersaiyaan-blocks/user
+interval=200 # reduce it as much as possible
+markup=pango
+
 [ipv4s-public]
 command=/bin/i3-supersaiyaan-blocks/ipv4s-public
 markup=pango
