--- a/i3blocks.conf
+++ b/i3blocks.conf
@@ -22,6 +22,13 @@ command=/bin/i3-supersaiyaan-blocks/user
 interval=200 # reduce it as much as possible
 markup=pango
 
+# Hardware usage graphs
+[hardware_usage]
+command=/bin/i3-supersaiyaan-blocks/hardware-usage
+interval=20
+markup=pango
+
+
 [ipv4s-public]
 command=/bin/i3-supersaiyaan-blocks/ipv4s-public
 markup=pango
